[Fix] Register - too much padding

--- a/client/src/app/auth/components/register/register.component.scss
+++ b/client/src/app/auth/components/register/register.component.scss
@@ -57,7 +57,7 @@
 
 @media screen and (min-width: 768px) {
   .register-container {
-    padding: 90px 16px 240px;
+    padding: 48px 16px 240px;
     // background-color: #f5f5f8;
     .form-container {
       padding: 36px;
